--- a/src/main/webapp/front_end/style.css
+++ b/src/main/webapp/front_end/style.css
@@ -1,3 +1,9 @@
-h1 {
-	colour: red ;
+.bg-custom{
+    background-color: #4a148c;
+}
+
+.navbar .nav-item .nav-link :hover  {
+	background-color: white;
+	color: #4a148c;
+	border-radius: 15px;
 }
